--- a/templates/create_verifiable_pdf.html
+++ b/templates/create_verifiable_pdf.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Verifiable PDF with QR Code</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h2 align="center">Create Verifiable PDF with QR Code</h2>
