--- a/templates/decrypt_pdf.html
+++ b/templates/decrypt_pdf.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Decrypt PDF</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"></head>
 <body>
     <div class="container">
         <h2>Decrypt PDF (Remove Password)</h2>
