--- a/templates/encrypt_pdf.html
+++ b/templates/encrypt_pdf.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Encrypt PDF (Add Password)</title>
-    <link rel="stylesheet" href="tool.css">
-</head>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"></head>
 <body>
     <div class="container">
         <h2>Encrypt PDF (Add Password)</h2>
