--- a/templates/event_extractor.html
+++ b/templates/event_extractor.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AI Event Extractor</title>
-    <link rel="stylesheet" href="tool.css">
-</head>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"></head>
 <body>
     <div class="container">
         <h2>AI Event Extractor</h2>
