--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
-    <link rel="stylesheet" href="login.css">
-</head>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"></head>
 <body>
     <h2>PDF Extractor Login</h2>
     <form action="/login" method="post">
