--- a/templates/logout.html
+++ b/templates/logout.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Logged Out</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"></head>
 <body>
     <div class="container">
         <h2>You have been successfully logged out.</h2>
